--- a/style/scss/_media.scss
+++ b/style/scss/_media.scss
@@ -41,10 +41,6 @@
 
 	.hero__container::before {
 		content: url('../../image/hero/soldier.png');
-		// background-image: url('../../image/hero/soldier.png');
-		// background-repeat: no-repeat;
-		// background-position: bottom center;
-		// background-size: auto;
 		position: absolute;
 		z-index: -2;
 		width: 910px;
@@ -1232,7 +1228,7 @@
 
 	// ===== HERO SECTION =====
 	.hero {
-		background-image: url('../../image/hero/hero-background-large-mobile.png');
+		background-image: url('../../image/hero/hero-background-mobile.png');
 		height: 1140px;
 		padding-top: 54px;
 		padding-bottom: $spacing-none-mobile;
@@ -1240,6 +1236,8 @@
 		&__text-container {
 			max-width: 100%;
 			margin-top: 470px;
+			position: relative;
+			z-index: 2;
 		}
 
 		&__title {
@@ -1265,6 +1263,31 @@
 		&__text-cta {
 			width: 100%;
 		}
+	}
+
+	.hero::before {
+		content: '';
+		background-image: url('../../image/hero/substract.png');
+		background-repeat: repeat-x;
+		background-position: bottom center;
+		background-size: auto 132px;
+		position: absolute;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
+		bottom: 0;
+		left: 0;
+	}
+
+	.hero::after {
+		content: url('../../image/hero/soldier.png');
+		transform: scale(0.6);
+		position: absolute;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
+		top: -15%;
+		left: -15%;
 	}
 
 	// ===== STAGES SECTION =====
